Revert "made the implementation more general"
This reverts commit 30dde52ce52c007f8fb2f7e467faf6d768da1af3.

Conflicts:
	4/sierpinsky.py
	4/svg_processor.py
	4/xml_writer.py

--- a/4/4.tex
+++ b/4/4.tex
@@ -62,4 +62,8 @@ Parameter.
 
 Beispiel für einen möglichen Aufruf: \src{./iterate.py figur0.svg}
 
+\newcommand{\InputSource}[1]{\subsection*{#1.py}\input{#1}}
+
+\InputSource{iterate}
+
 \end{document}
