--- a/5/5.tex
+++ b/5/5.tex
@@ -35,7 +35,7 @@ nicht glücklich sind. Je höher $\alpha$ ist, desto seltener wird diese Situati
 sein.
 
 \section{Simulation}
-Die Simulation wird von einem Programm durchgeführt. Es als Variable Parameter
+Die Simulation wird von einem Programm durchgeführt. Als variable Parameter
 sind die Anzahl der Tage, die simuliert werden und der Schwellwert $\alpha$ zu
 betrachten. Ersterer Parameter hat kaum Einfluss auf die Simulationsergebnisse,
 es ist aber darauf zu achten, diesen hinreichend groß zu wählen, um den Einfluss
